--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,8 @@ cython_debug/
 
 # SFC
 sfc/data/
+sfc/output/attention/*.avi
+sfc/output/attention/*.mp4
 sfc/output/OF/*.avi
 sfc/output/OF/*.mp4
 
