Changed data structure, deleted some files and created initial README

--- a/.gitignore
+++ b/.gitignore
@@ -159,9 +159,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# SFC
-sfc/data/*
-sfc/output/*
+# data
+data/*
+output/*
+
 
 # OS Specific
 .DS_Store
