--- a/data/annotations/pedestrian_crossings.yml
+++ b/data/annotations/pedestrian_crossings.yml
@@ -22,3 +22,69 @@
 - id: 000893
   event_window: [40, 74]
   direction: right
+- id: 000046
+  event_window: [39, 71]
+  direction: right
+- id: 000060
+  event_window: [65, 88]
+  direction: right
+- id: 000113
+  event_window: [155, 170]
+  direction: left
+- id: 000169
+  event_window: [65, 175]
+  direction: right
+- id: 000237
+  event_window: [131, 179]
+  direction: right
+- id: 000292
+  event_window: [108, 139]
+  direction: left
+- id: 000314
+  event_window: [130, 159]
+  direction: right
+- id: 000316
+  event_window: [112, 128]
+  direction: right
+- id: 000398
+  event_window: [92, 120]
+  direction: left
+- id: 000433
+  event_window: [37, 81]
+  direction: right
+- id: 000433
+  event_window: [75, 127]
+  direction: right
+- id: 000461
+  event_window: [68, 192]
+  direction: left
+- id: 000461
+  event_window: [111, 200]
+  direction: right
+- id: 000521
+  event_window: [0, 17]
+  direction: left
+- id: 000521
+  event_window: [175, 200]
+  direction: right
+- id: 000544
+  event_window: [188, 200]
+  direction: left
+- id: 000567
+  event_window: [54, 112]
+  direction: right
+- id: 000617
+  event_window: [1, 52]
+  direction: left
+- id: 000653
+  event_window: [25, 70]
+  direction: left
+- id: 000855
+  event_window: [144, 200]
+  direction: right
+- id: 000858
+  event_window: [63, 141]
+  direction: right
+- id: 000858
+  event_window: [108, 171]
+  direction: right
