--- a/config/event/cut_in_left.yml
+++ b/config/event/cut_in_left.yml
@@ -1,12 +1,9 @@
 # A vehicle performs a cut-in maneuver, cutting in from the left to the right
 saliency_threshold: 0.4
-angle_threshold: 114    # For running with OF
-grid_top_left:
-  - 0
-  - 0.4
-grid_bottom_right:
-  - 0.6
-  - 0.5
-grid_num_rows: 1
-grid_num_cols: 6
-grid_direction: right
+angle_threshold: 114 # For running with OF
+grids:
+  - top_left: [0, 0.4]
+    bottom_right: [0.6, 0.5]
+    rows: 1
+    cols: 6
+    direction: "right"
