--- a/config/event/pedestrian_crossing_left.yml
+++ b/config/event/pedestrian_crossing_left.yml
@@ -1,12 +1,14 @@
 # A pedestrian crosses the road from the left to the right
 saliency_threshold: 0.3
-angle_threshold: 90 # For running with OF
-grid_top_left:
-  - 0.15
-  - 0.45
-grid_bottom_right:
-  - 0.85
-  - 0.7
-grid_num_rows: 1
-grid_num_cols: 8
-grid_direction: right
+angle_threshold: 90 # For running with Optical Flow
+grids:
+  - top_left: [0.15, 0.45]
+    bottom_right: [0.4, 0.7]
+    rows: 1
+    cols: 3
+    direction: "right"
+  - top_left: [0.6, 0.45]
+    bottom_right: [0.85, 0.7]
+    rows: 1
+    cols: 3
+    direction: "right"
