Updated progress bar texts and added nested bars for frames for grid_attention and grid_optical_flow

--- a/config/event/pedestrian_crossing_right.yml
+++ b/config/event/pedestrian_crossing_right.yml
@@ -1,5 +1,6 @@
 # A pedestrian crosses the road from the right to the left
 saliency_threshold: 0.3
+angle_threshold: 114
 grids:
   - top_left: [0.15, 0.45]
     bottom_right: [0.4, 0.7]
