--- a/config/event/cut_in_right.yml
+++ b/config/event/cut_in_right.yml
@@ -1,8 +1,14 @@
 # A vehicle performs a cut-in maneuver, cutting in from the right to the left
 saliency_threshold: 0.4
-grids:
-  - top_left: [0.4, 0.35]
-    bottom_right: [1, 0.6]
-    rows: 2
-    cols: 6
-    direction: "left"
+angle_threshold: 114
+grid_top_left: [0.4, 0.35]
+grid_bottom_right: [1, 0.6]
+grid_num_rows: 2
+grid_num_cols: 6
+grid_direction:
+  "left"
+  # - top_left: [0.4, 0.35]
+  #   bottom_right: [1, 0.6]
+  #   rows: 2
+  #   cols: 6
+  #   direction: "left"
