--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cycler==0.12.1
 et-xmlfile==1.1.0
 fonttools==4.49.0
 gmpy2==2.1.5
+joblib==1.3.2
 kiwisolver==1.4.5
 matplotlib==3.8.3
 numpy==1.26.4
@@ -15,7 +16,10 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
+scikit-learn==1.4.1.post1
+scipy==1.12.0
 six==1.16.0
+threadpoolctl==3.4.0
 tqdm==4.66.2
 typing==3.7.4.3
 tzdata==2024.1
