Fixed handling both directions of pedestrian crossings

--- a/annotations/zod_pedestrian.yml
+++ b/annotations/zod_pedestrian.yml
@@ -1,90 +1,90 @@
 - id: "000383"
   event_window: [132, 200]
-  direction: right
+  type: left
 - id: "000879"
   event_window: [182, 200]
-  direction: right
+  type: left
 - id: "001300"
   event_window: [1, 23]
-  direction: left
+  type: right
 - id: "001085"
   event_window: [193, 200]
-  direction: right
+  type: left
 - id: "000389"
   event_window: [98, 164]
-  direction: right
+  type: left
 - id: "000011"
   event_window: [20, 77]
-  direction: right
+  type: left
 - id: "000893"
   event_window: [1, 34]
-  direction: left
+  type: right
 - id: "000893"
   event_window: [40, 74]
-  direction: right
+  type: left
 - id: "000046"
   event_window: [39, 71]
-  direction: right
+  type: left
 - id: "000060"
   event_window: [65, 88]
-  direction: right
+  type: left
 - id: "000113"
   event_window: [155, 170]
-  direction: left
+  type: right
 - id: "000169"
   event_window: [65, 175]
-  direction: right
+  type: left
 - id: "000237"
   event_window: [131, 179]
-  direction: right
+  type: left
 - id: "000292"
   event_window: [108, 139]
-  direction: left
+  type: right
 - id: "000314"
   event_window: [130, 159]
-  direction: right
+  type: left
 - id: "000316"
   event_window: [112, 128]
-  direction: right
+  type: left
 - id: "000398"
   event_window: [92, 120]
-  direction: left
+  type: right
 - id: "000433"
   event_window: [37, 81]
-  direction: right
+  type: left
 - id: "000433"
   event_window: [75, 127]
-  direction: right
+  type: left
 - id: "000461"
   event_window: [68, 192]
-  direction: left
+  type: right
 - id: "000461"
   event_window: [111, 200]
-  direction: right
+  type: left
 - id: "000521"
   event_window: [0, 17]
-  direction: left
+  type: right
 - id: "000521"
   event_window: [175, 200]
-  direction: right
+  type: left
 - id: "000544"
   event_window: [188, 200]
-  direction: left
+  type: right
 - id: "000567"
   event_window: [54, 112]
-  direction: right
+  type: left
 - id: "000617"
   event_window: [1, 52]
-  direction: left
+  type: right
 - id: "000653"
   event_window: [25, 70]
-  direction: left
+  type: right
 - id: "000855"
   event_window: [144, 200]
-  direction: right
+  type: left
 - id: "000858"
   event_window: [63, 141]
-  direction: right
+  type: left
 - id: "000858"
   event_window: [108, 171]
-  direction: right
+  type: left
