--- a/config/zod/pedestrian_crossing.yml
+++ b/config/zod/pedestrian_crossing.yml
@@ -1,6 +1,6 @@
 # A pedestrian crosses the road
+fps: 14
 saliency_threshold: 0.2 # Saliency
-angle_threshold: 90 # Optical flow
 grids:
   - top_left: [0.2, 0.45]
     bottom_right: [0.45, 0.7]
@@ -10,3 +10,13 @@ grids:
     bottom_right: [0.8, 0.7]
     rows: 1
     cols: 3
+required_cell_subsets:
+  - !!set { 1, 2, 3 }
+  - !!set { 4, 5, 6 }
+
+attention:
+  margin: 0
+  cell_ranges: []
+optical_flow:
+  margin: 0
+  cell_ranges: []
