--- a/config/zod/pedestrian_crossing.yml
+++ b/config/zod/pedestrian_crossing.yml
@@ -1,22 +1,33 @@
-# A pedestrian crosses the road
-fps: 14
-saliency_threshold: 0.2 # Saliency
-grids:
-  - top_left: [0.2, 0.45]
-    bottom_right: [0.45, 0.7]
-    rows: 1
-    cols: 3
-  - top_left: [0.55, 0.45]
-    bottom_right: [0.8, 0.7]
-    rows: 1
-    cols: 3
-required_cell_subsets:
-  - !!set { 1, 2, 3 }
-  - !!set { 4, 5, 6 }
+grid_config:
+  fps: 14
+  saliency_threshold: 0.2
+  grids:
+    - top_left: [0.2, 0.45]
+      bottom_right: [0.45, 0.7]
+      rows: 1
+      cols: 3
+    - top_left: [0.55, 0.45]
+      bottom_right: [0.8, 0.7]
+      rows: 1
+      cols: 3
 
-attention:
-  margin: 0
-  cell_ranges: []
-optical_flow:
-  margin: 0
-  cell_ranges: []
+detector_config:
+  required_cell_subsets:
+    - !!set { 1, 2, 3 }
+    - !!set { 4, 5, 6 }
+  detection_calibration_videos:
+    - "1KIGitKyAbsQCXw66UGFU"
+    - "00Jyiy3E2DstQTcaaRHsI"
+    - "IFGmZTtK9U3ntir243GGt"
+  attention:
+    margin: 0
+    cell_ranges:
+      1: [4.09e-07, 4.1e-07]
+      2: [8.19e-07, 8.2e-07]
+      3: [1.63e-06, 1.64e-06]
+      4: [3.27e-06, 3.28e-06]
+      5: [6.55e-06, 6.56e-06]
+      6: [1.31e-05, 1.32e-05]
+  optical_flow:
+    margin: 0
+    cell_ranges: []
