Tweaks to optical flow activation

--- a/config/zod/pedestrian_crossing.yml
+++ b/config/zod/pedestrian_crossing.yml
@@ -30,4 +30,10 @@ detector_config:
       6: [1.31e-05, 1.32e-05]
   optical_flow:
     margin: 0
-    cell_ranges: []
+    cell_ranges:
+      1: [4.09e-07, 4.1e-07]
+      2: [8.19e-07, 8.2e-07]
+      3: [1.63e-06, 1.64e-06]
+      4: [3.27e-06, 3.28e-06]
+      5: [6.55e-06, 6.56e-06]
+      6: [1.31e-05, 1.32e-05]
