--- a/config/smirk/pedestrian_crossing.yml
+++ b/config/smirk/pedestrian_crossing.yml
@@ -1,6 +1,13 @@
 grid_config:
   fps: 10
-  saliency_threshold: 0.2
+  attention:
+    saliency_threshold: 0.2
+  optical_flow:
+    event_angles: [90, -90]
+    angle_range_threshold: 20
+    flow_threshold: 3
+    angle_diff_threshold: 75
+    nr_frames_moving_avg: 10
   grids:
     - top_left: [0.2, 0.45]
       bottom_right: [0.45, 0.7]
