--- a/config/zod/pedestrian_crossing.yml
+++ b/config/zod/pedestrian_crossing.yml
@@ -1,5 +1,6 @@
 grid_config:
   fps: 10
+  event_length_limit_seconds: [2, 20]
   attention:
     saliency_threshold: 0.35
   optical_flow:
@@ -8,6 +9,12 @@ grid_config:
     angle_diff_threshold: 75
     flow_threshold: 3
     nr_frames_moving_avg: 10
+  cell_gap_time_limits:
+    - [0, 1]
+    - [0, 1]
+    - [0.5, 3]
+    - [0, 1]
+    - [0, 1]
   grids:
     - top_left: [0.2, 0.45]
       bottom_right: [0.45, 0.7]
@@ -27,7 +34,6 @@ detector_config:
     - "00Jyiy3E2DstQTcaaRHsI"
     - "IFGmZTtK9U3ntir243GGt"
   attention:
-    margin: 0
     cell_ranges:
       1: [4.09e-07, 4.1e-07]
       2: [8.19e-07, 8.2e-07]
@@ -36,7 +42,6 @@ detector_config:
       5: [6.55e-06, 6.56e-06]
       6: [1.31e-05, 1.32e-05]
   optical_flow:
-    margin: 0
     cell_ranges:
       1: [2.62208e-05, 2.62208e-05]
       2: [5.24416e-05, 5.24416e-05]
