--- a/config/smirk/pedestrian_crossing.yml
+++ b/config/smirk/pedestrian_crossing.yml
@@ -1,6 +1,5 @@
 grid_config:
   fps: 10
-  event_length_limits_seconds: [2, 20]
   attention:
     saliency_threshold: 0.2
   optical_flow:
@@ -10,7 +9,6 @@ grid_config:
     angle_diff_threshold: 75
     nr_frames_moving_avg: 10
   grids:
-    - cell_gap_time_limits: [[], [], [], [], []]
     - top_left: [0.2, 0.45]
       bottom_right: [0.45, 0.7]
       rows: 1
@@ -21,6 +19,13 @@ grid_config:
       cols: 3
 
 detector_config:
+  event_length_limit_seconds: [1.25, 10]
+  cell_gap_time_limits:
+    - [0.1, 1]
+    - [0.1, 1]
+    - [0.5, 3]
+    - [0.1, 1]
+    - [0.1, 1]
   required_cell_subsets:
     - !!set { 1, 2, 3 }
     - !!set { 4, 5, 6 }
