--- a/config/smirk/pedestrian_crossing.yml
+++ b/config/smirk/pedestrian_crossing.yml
@@ -19,33 +19,33 @@ grid_config:
       cols: 3
 
 detector_config:
-  event_length_limit_seconds: [1.25, 10]
+  event_length_limit_seconds: [1, 20]
   cell_gap_time_limits:
-    - [0.1, 1]
-    - [0.1, 1]
-    - [0.5, 3]
-    - [0.1, 1]
-    - [0.1, 1]
+    - [0.1, 2]
+    - [0.1, 2]
+    - [0.3, 4]
+    - [0.1, 2]
+    - [0.1, 2]
   required_cell_subsets:
     - !!set { 1, 2, 3 }
     - !!set { 4, 5, 6 }
   detection_calibration_videos:
-    - "1KIGitKyAbsQCXw66UGFU"
-    - "00Jyiy3E2DstQTcaaRHsI"
-    - "IFGmZTtK9U3ntir243GGt"
+    - nep5WLDvfrGgEusiBrxPe
+    - YGu13s0lKN3qBmtC3vc41
+    - Lr1t1ufKrvbTruQUqtjaz
   attention:
     cell_ranges:
-      1: [4.0e-07, 4.2e-07]
-      2: [8.0e-07, 8.4e-07]
-      3: [1.55e-06, 1.7e-06]
-      4: [3.18e-06, 3.4e-06]
-      5: [6.45e-06, 6.7e-06]
-      6: [1.25e-05, 1.4e-05]
+      1: [2.7e-07, 5.5e-07]
+      2: [0.65e-06, 1.0e-06]
+      3: [1.44e-06, 1.84e-06]
+      4: [3.1e-06, 3.5e-06]
+      5: [6.3e-06, 6.8e-06]
+      6: [1.28e-05, 1.34e-05]
   optical_flow:
     cell_ranges:
-      1: [2.62208e-05, 2.62208e-05]
-      2: [5.24416e-05, 5.24416e-05]
-      3: [0.0001048832, 0.0001572996]
-      4: [0.000209716, 0.000629148]
-      5: [0.0004195328, 0.0004195328]
-      6: [0.0008390656, 0.0012585984]
+      1: [1.8e-05, 3.5e-05]
+      2: [4.7e-05, 6.0e-05]
+      3: [0.95e-04, 1.2e-04]
+      4: [1.95e-04, 2.25e-04]
+      5: [4.05e-04, 4.35e-04]
+      6: [8.2e-04, 8.5e-04]
